--- a/assets/package.json
+++ b/assets/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3"
   }
